--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>my first website</p>
+    <h1>my first website</h1>
+    <p>Look! I can push github.</p>
 </body>
 </html>
